TRiAS/Framework/LeadTools/Include/Ltann.h


typedef enum tagANNOBJECTTYPE 
{
   ANNOBJECT_CONTAINER = 0,
   ANNOBJECT_POINTER = 1,
   ANNOBJECT_AUDIO = 2,
   ANNOBJECT_BUTTON = 3,
   ANNOBJECT_ELLIPSE = 4,
   ANNOBJECT_FREEHAND = 5,
   ANNOBJECT_HILITE = 6,
   ANNOBJECT_HOTSPOT = 7,
   ANNOBJECT_LINE = 8,
   ANNOBJECT_NOTE = 9,
   ANNOBJECT_POLYGON = 10,
   ANNOBJECT_POLYLINE = 11,
   ANNOBJECT_RECT = 12,
   ANNOBJECT_REDACT = 13,
   ANNOBJECT_STAMP = 14,
   ANNOBJECT_TEXT = 15,
   ANNOBJECT_AUTOMATION = 16,
   ANNOBJECT_RULER = 17,
   ANNOBJECT_CROSSPRODUCT = 18,
   ANNOBJECT_POINT = 19,
   ANNOBJECT_PROTRACTOR = 20,
   ANNOBJECT_VIDEO = 21,
   ANNOBJECT_PUSHPIN = 22,
   ANNOBJECT_FREEHANDHOTSPOT = 23,
   ANNOBJECT_LAST,            
} ANNOBJECTTYPE, L_FAR*pANNOBJECTTYPE;
typedef struct _ANNPOINT
{
   L_DOUBLE x;
   L_DOUBLE y;
} ANNPOINT, L_FAR *pANNPOINT;
typedef struct _ANNRECT
{
   L_DOUBLE left;
   L_DOUBLE top;
   L_DOUBLE right;
   L_DOUBLE bottom;
} ANNRECT, L_FAR *pANNRECT;
typedef struct _ANNTOOL
{
   L_UINT         uTool;
   L_INT          nMenuTextID;          
   L_TCHAR L_FAR*  pMenuText;            
} ANNTOOL, L_FAR*pANNTOOL;
typedef struct _ANNBUTTON
{
   L_UINT         uFlags;
   L_UINT         uTool;
   L_UINT         uToolCount;
   pANNTOOL       pTools;
   pBITMAPHANDLE  pBitmapUp;
   pBITMAPHANDLE  pBitmapDown;
#ifdef WIN32
   L_INT          nToolTipTextID;       
   L_TCHAR L_FAR*  pToolTipText;         
#endif
} ANNBUTTON, L_FAR*pANNBUTTON;
typedef struct _ANNTOOLBARINFO
{
   L_UINT   uButtons;
   L_UINT   uRows;
   L_UINT   uColumns;
} ANNTOOLBARINFO, L_FAR*pANNTOOLBARINFO;
typedef HANDLE HANNOBJECT;
typedef HANNOBJECT L_FAR *pHANNOBJECT;
typedef struct _ANNMOUSEPOS
{
   L_BOOL   fDoubleClick;  
   POINT    pt;
   L_UINT   uKeyFlags;
   L_BOOL   fUpdatePos;    
} ANNMOUSEPOS, L_FAR*pANNMOUSEPOS;
typedef enum tagANNCHANGETYPE
{
   ANNCHANGE_DELETE,       
   ANNCHANGE_ROTATE,       
} ANNCHANGETYPE, L_FAR*pANNCHANGETYPE;
typedef struct tagANNCHANGEPARAM
{
   L_INT          nSize;            
   HANNOBJECT     hObject;          
   ANNCHANGETYPE  uChange;          
   L_INT          nChange;          
   L_DOUBLE       dAngle;           
} ANNCHANGEPARAM, L_FAR*pANNCHANGEPARAM;
typedef struct tagANNFILEINFO
{
   L_INT32     nSize;
   L_INT32     nOffset;
   L_INT32     nVersion;
   L_UINT      uFormat;          
   L_INT32     nTotalPages;
   L_INT32     nReserved;
} ANNFILEINFO, L_FAR*pANNFILEINFO;
typedef L_INT (pEXT_CALLBACK ANNENUMCALLBACK) (HANNOBJECT hObject, L_VOID L_FAR * pUserData);
L_INT EXT_FUNCTION L_AnnDeletePageOffset(L_INT fd,	
                                         L_INT32 nOffset,
                                         L_INT32 nPage);
L_INT EXT_FUNCTION L_AnnDeletePage(L_TCHAR L_FAR * pFile, 
                                   L_INT32 nPage);
L_INT EXT_FUNCTION L_AnnDeletePageMemory (HGLOBAL hMem, L_UINT32 *puMemSize, L_INT32 nPage);
L_INT EXT_FUNCTION L_AnnFileInfo (L_TCHAR *pszFile, 
                                  pANNFILEINFO pAnnFileInfo);
L_INT EXT_FUNCTION L_AnnFileInfoOffset (L_INT fd, 
                                        pANNFILEINFO pAnnFileInfo);
L_INT EXT_FUNCTION L_AnnFileInfoMemory (L_UCHAR L_FAR * pMem, 
                                        L_UINT32 uMemSize, 
                                        pANNFILEINFO pAnnFileInfo);
L_INT EXT_FUNCTION L_AnnGetAutoDrawEnable (HANNOBJECT hObject,
                                          L_BOOL L_FAR *pfEnable);
L_INT EXT_FUNCTION L_AnnGetAutoMenuEnable (HANNOBJECT hObject,
                                          L_BOOL L_FAR *pfEnable);
L_INT EXT_FUNCTION L_AnnGetAutoText (HANNOBJECT hObject,
                                     L_UINT uItem,
                                     L_TCHAR L_FAR *pText);
L_INT EXT_FUNCTION L_AnnGetAutoTextLen (HANNOBJECT hObject,
                                     L_UINT uItem,
                                     L_UINT L_FAR * puLen);
L_INT EXT_FUNCTION L_AnnGetBitmapDpiX(HANNOBJECT hObject,
                                      L_DOUBLE  L_FAR*pdDpiX);
L_INT EXT_FUNCTION L_AnnGetBitmapDpiY(HANNOBJECT hObject,
                                      L_DOUBLE  L_FAR*pdDpiY);
L_INT EXT_FUNCTION L_AnnGetDistance(HANNOBJECT hObject,
                                    L_DOUBLE L_FAR*pdDistance,
                                    L_DOUBLE L_FAR*pdDistance2);
L_INT EXT_FUNCTION L_AnnGetGaugeLength(HANNOBJECT hObject,
                                       L_DOUBLE L_FAR*pdLength);
L_INT EXT_FUNCTION L_AnnGetToolBarButtonVisible(HWND hwndToolBar,
                                     L_UINT uButton,
                                     L_BOOL L_FAR *pfVisible);
L_INT EXT_FUNCTION L_AnnGetUnit(HANNOBJECT hObject,
                                L_UINT L_FAR*puUnit,
                                L_TCHAR L_FAR*pUnitAbbrev,
                                L_UINT L_FAR*puPrecision);
L_INT EXT_FUNCTION L_AnnGetUnitLen(HANNOBJECT hObject,
                                   L_UINT L_FAR*puLen);
L_INT EXT_FUNCTION L_AnnSetAutoDrawEnable (HANNOBJECT hObject,
                                          L_BOOL fEnable);
L_INT EXT_FUNCTION L_AnnSetAutoMenuEnable (HANNOBJECT hObject,
                                          L_BOOL fEnable);
L_INT EXT_FUNCTION L_AnnSetAutoText (HANNOBJECT hObject,
                                     L_UINT uItem,
                                     L_TCHAR L_FAR *pText);
L_INT EXT_FUNCTION L_AnnSetBitmapDpiX(HANNOBJECT hObject,
                                      L_DOUBLE  dDpiX,
                                      L_UINT    uFlags);
L_INT EXT_FUNCTION L_AnnSetBitmapDpiY(HANNOBJECT hObject,
                                      L_DOUBLE  dDpiY,
                                      L_UINT    uFlags);
L_INT EXT_FUNCTION L_AnnSetGaugeLength(HANNOBJECT hObject,
                                       L_DOUBLE dLength,
                                       L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetScalarY(HANNOBJECT hObject,
                                 L_DOUBLE dScalarY,
                                 L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetTag (HANNOBJECT hObject,
                                 L_UINT32 uTag,
                                 L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetText (HANNOBJECT hObject,
                                  L_TCHAR L_FAR * pText,
                                  L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetTool (HANNOBJECT hObject,
                                 L_UINT uTool);
L_INT EXT_FUNCTION L_AnnSetToolBarButtonVisible(HWND hwndToolBar,
                                  L_UINT uButton,
                                  L_BOOL fVisible);
L_INT EXT_FUNCTION L_AnnSetToolBarChecked(HWND hwndToolBar,
                                  L_UINT uChecked);
L_INT EXT_FUNCTION L_AnnSetTransparent (HANNOBJECT hObject,
                                      L_BOOL bTransparent,
                                      L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetUndoDepth (HANNOBJECT hObject,
                                      L_UINT uLevels);
L_INT EXT_FUNCTION L_AnnSetUnit(HANNOBJECT hObject,
                                L_UINT uUnit,
                                L_TCHAR L_FAR* pUnitAbbrev,
                                L_UINT uPrecision,
                                L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetUserMode (HANNOBJECT hObject,
                                      L_UINT uMode);
L_INT EXT_FUNCTION L_AnnSetVisible (HANNOBJECT hObject,
                                     L_BOOL fVisible,
                                     L_UINT uFlags,
                                     L_TCHAR L_FAR*pUserList);
L_INT EXT_FUNCTION L_AnnSetWnd (HANNOBJECT hObject,
                                 HWND hWnd);
L_INT EXT_FUNCTION L_AnnShowLockedIcon (HANNOBJECT hObject,
                                     L_BOOL bShow,
                                     L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnUndo (HANNOBJECT hObject);
L_INT EXT_FUNCTION L_AnnUnlock (HANNOBJECT hObject, 
                              L_TCHAR L_FAR* pUnlockKey, 
                              L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnUnrealize(pBITMAPHANDLE pBitmap, 
                                LPRECT prcBounds, 
                                HANNOBJECT hObject, 
                                L_BOOL fSelected);
L_INT EXT_FUNCTION L_AnnSetNodes(HANNOBJECT hObject, 
                                 L_BOOL bShowNodes, 
                                 L_UINT uGapNodes, 
                                 L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetNodes(HANNOBJECT hObject, 
                                 L_BOOL L_FAR*pbShowNodes, 
                                 L_UINT L_FAR*puGapNodes);
L_INT EXT_FUNCTION L_AnnSetProtractorOptions(HANNOBJECT hObject, 
                                        L_BOOL  bAcute,
                                        L_UINT  uUnit,
                                        L_TCHAR L_FAR*pszAbbrev,
                                        L_UINT  uPrecision,
                                        L_DOUBLE dArcRadius,
                                        L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetProtractorOptions(HANNOBJECT hObject,
                                        L_BOOL  L_FAR*pbAcute,
                                        L_UINT  L_FAR*puUnit,
                                        L_UINT L_FAR*puAbbrevLen,
                                        L_TCHAR L_FAR*pszAbbrev,
                                        L_UINT  L_FAR*puPrecision,
                                        L_DOUBLE L_FAR*pdArcRadius);
L_INT EXT_FUNCTION L_AnnSetName (HANNOBJECT    hObject, 
                                 L_BOOL        bShowName, 
                                 L_TCHAR L_FAR *pText,
                                 pANNPOINT     pNameOffset,
                                 L_BOOL        bNameRestrict,
                                 L_UINT        uFlags);
L_INT EXT_FUNCTION L_AnnGetName (HANNOBJECT     hObject, 
                                 L_BOOL L_FAR  *pbShowName, 
                                 L_UINT L_FAR  *puNameLen, 
                                 L_TCHAR L_FAR  *pName,
                                    pANNPOINT      pNameOffset,
                                    L_BOOL L_FAR  *pbNameRestrict);
L_INT EXT_FUNCTION L_AnnSetShowFlags (HANNOBJECT hObject,
                                       L_UINT uShowFlags,
                                       L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetShowFlags (HANNOBJECT hObject,
                                       L_UINT L_FAR*puShowFlags);
L_INT EXT_FUNCTION L_AnnGetAngle(HANNOBJECT hObject,
                                 L_DOUBLE L_FAR*pdAngle);
L_INT EXT_FUNCTION L_AnnSetMetafile (HANNOBJECT hObject, 
                                     HMETAFILE hMetafile, 
                                     L_UINT uType, 
                                     L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetMetafile (HANNOBJECT hObject, 
                                     HMETAFILE L_FAR*phMetafile);
L_INT EXT_FUNCTION L_AnnSetPredefinedMetafile(L_UINT uType, 
                                              HMETAFILE hMetafile);
L_INT EXT_FUNCTION L_AnnGetPredefinedMetafile(L_UINT uType, 
                                              HMETAFILE L_FAR*phMetafile,
                                              L_BOOL L_FAR*pbEnhanced);
L_INT EXT_FUNCTION L_AnnSetSecondaryBitmap (HANNOBJECT hObject, 
                                            pBITMAPHANDLE pBitmap, 
                                            L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetSecondaryBitmap (HANNOBJECT hObject, 
                                            pBITMAPHANDLE pBitmap);
L_INT EXT_FUNCTION L_AnnSetAutoMenuItemEnable(HANNOBJECT hObject, 
                                              L_INT nObjectType, 
                                              L_UINT uItem, 
                                              L_UINT uEnable, 
                                              L_UINT uFlags,
                                              L_TCHAR L_FAR*pUserList);
L_INT EXT_FUNCTION L_AnnGetAutoMenuItemEnable(HANNOBJECT hObject, 
                                              L_INT nObjectType, 
                                              L_UINT uItem, 
                                              L_UINT L_FAR*puEnable);
L_INT EXT_FUNCTION L_AnnSetAutoMenuState(HANNOBJECT hObject, 
                                         L_INT nObjectType, 
                                         L_UCHAR L_FAR*pEnable, 
                                         L_UCHAR L_FAR*pEnableFlags, 
                                         L_UINT uBits, 
                                         L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetAutoMenuState(HANNOBJECT hObject, 
                                         L_INT nObjectType, 
                                         L_UCHAR L_FAR*pEnable, 
                                         L_UCHAR L_FAR*pEnableFlags, 
                                         L_UINT uBits);
L_INT EXT_FUNCTION L_AnnSetUser(HANNOBJECT hObject, 
                                L_TCHAR L_FAR*pOldUser, 
                                L_TCHAR L_FAR*pNewUser, 
                                L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetToolBarButtons(HWND hwndToolBar,
                                          pANNBUTTON pButtons,
                                          L_UINT uButtons);
L_INT EXT_FUNCTION L_AnnGetToolBarButtons(HWND hwndToolBar,
                                          pANNBUTTON pButtons,
                                          L_UINT L_FAR*puButtons);
L_INT EXT_FUNCTION L_AnnFreeToolBarButtons(pANNBUTTON pButtons,
                                           L_UINT uButtons);
L_INT EXT_FUNCTION L_AnnGetToolBarInfo(HWND hwndToolBar,
                                       pANNTOOLBARINFO pInfo);
L_INT EXT_FUNCTION L_AnnSetToolBarColumns(HWND hwndToolBar,
                                          L_UINT uColumns);
L_INT EXT_FUNCTION L_AnnSetToolBarRows(HWND hwndToolBar,
                                          L_UINT uColumns);
L_INT EXT_FUNCTION L_AnnSetAutoDefaults(HANNOBJECT hAutomation, 
                                        HANNOBJECT hObject, 
                                        L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnSetTransparentColor (HANNOBJECT hObject, 
                                             COLORREF crTransparent, 
                                             L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetTransparentColor (HANNOBJECT hObject, 
                                             COLORREF L_FAR * pcrTransparent);
L_INT EXT_FUNCTION L_AnnGetUndoDepth (HANNOBJECT hObject,
                                      L_UINT L_FAR*puUsedLevels,
                                      L_UINT L_FAR*puMaxLevels);
L_INT EXT_FUNCTION L_AnnGroup (HANNOBJECT hObject, 
                               L_UINT uFlags, 
                               L_TCHAR L_FAR*pUserList);
L_INT EXT_FUNCTION L_AnnUngroup (HANNOBJECT hObject, 
                               L_UINT uFlags, 
                               L_TCHAR L_FAR*pUserList);
L_INT EXT_FUNCTION L_AnnSetAutoOptions (HANNOBJECT hObject,
                                        L_UINT uFlags);
L_INT EXT_FUNCTION L_AnnGetAutoOptions (HANNOBJECT hObject,
                                        L_UINT L_FAR *puFlags);
L_INT EXT_FUNCTION L_AnnGetObjectFromTag (HANNOBJECT hContainer,
                                          L_UINT uFlags,
                                          L_UINT32 uTag,
                                          pHANNOBJECT phTagObject);
L_INT EXT_FUNCTION L_AnnGetRgnHandle(HANNOBJECT hObject,
                                    pRGNXFORM pXForm,
                                    HRGN L_FAR *phRgn);
L_INT EXT_FUNCTION L_AnnGetArea(HANNOBJECT hObject, 
                                L_UINT32 L_FAR*puCount);