TRiAS/Framework/LeadTools/Include/l_ocxann.bas

Declare Function L_AnnSetScalarY Lib "LTANN13N" (ByVal hObject&, ByVal dScalarY As Double, ByVal uFlags&) As Long
Declare Function L_AnnSetTag Lib "LTANN13N" (ByVal hObject&, ByVal uTag&, ByVal uFlags&) As Long
Declare Function L_AnnSetText Lib "LTANN13N" (ByVal hObject&, ByVal pText$, ByVal uFlags&) As Long
Declare Function L_AnnSetTool Lib "LTANN13N" (ByVal hObject&, ByVal uTool&) As Long
Declare Function L_AnnSetToolBarChecked Lib "LTANN13N" (ByVal hwndToolBar&, ByVal uChecked&) As Long
Declare Function L_AnnSetTransparent Lib "LTANN13N" (ByVal hObject&, ByVal bTransparent&, ByVal uFlags&) As Long
Declare Function L_AnnSetUndoDepth Lib "LTANN13N" (ByVal hObject&, ByVal uLevels&) As Long
Declare Function L_AnnSetUserMode Lib "LTANN13N" (ByVal hObject&, ByVal uMode&) As Long
Declare Function L_AnnSetVisible Lib "LTANN13N" (ByVal hObject&, ByVal fVisible&, ByVal uFlags&, ByVal pUserList$) As Long
Declare Function L_AnnSetWnd Lib "LTANN13N" (ByVal hObject&, ByVal hWnd&) As Long
Declare Function L_AnnShowLockedIcon Lib "LTANN13N" (ByVal hObject&, ByVal bShow&, ByVal uFlags&) As Long
Declare Function L_AnnUndo Lib "LTANN13N" (ByVal hObject&) As Long
Declare Function L_AnnUnlock Lib "LTANN13N" (ByVal hObject&, ByVal pUnlockKey$, ByVal uFlags&) As Long
Declare Function L_AnnUnrealize Lib "LTANN13N" (hBitmap As LEADBitmapHandle, prcBounds As RECT, ByVal hObject&, ByVal fSelected&) As Long

Declare Function L_AnnGetAutoText Lib "LTANN13N" (ByVal hObject&, ByVal uItem&, ByVal pText$) As Long
Declare Function L_AnnGetAutoTextLen Lib "LTANN13N" (ByVal hObject&, ByVal uItem&, ByRef puLen&) As Long
Declare Function L_AnnGetToolBarButtonVisible Lib "LTANN13N" (ByVal hwndToolBar&, ByVal uButton&, ByRef pfVisible&) As Long
Declare Function L_AnnSetAutoText Lib "LTANN13N" (ByVal hObject&, ByVal uItem&, ByVal pText$) As Long
Declare Function L_AnnSetToolBarButtonVisible Lib "LTANN13N" (ByVal hwndToolBar&, ByVal uButton&, ByVal fVisible&) As Long
Declare Function L_AnnGetAutoDrawEnable Lib "LTANN13N" (ByVal hObject&, ByRef pfEnable&) As Long
Declare Function L_AnnSetAutoDrawEnable Lib "LTANN13N" (ByVal hObject&, ByVal pfEnable&) As Long

Declare Function L_AnnSetBitmapDpiX Lib "LTANN13N" (ByVal hObject&, ByVal dDpiX As Double, ByVal uFlags&) As Long
Declare Function L_AnnSetBitmapDpiY Lib "LTANN13N" (ByVal hObject&, ByVal dDpiY As Double, ByVal uFlags&) As Long
Declare Function L_AnnGetBitmapDpiX Lib "LTANN13N" (ByVal hObject&, ByRef pdDpiX As Double) As Long
Declare Function L_AnnGetBitmapDpiY Lib "LTANN13N" (ByVal hObject&, ByRef pdDpiY As Double) As Long
Declare Function L_AnnSetUnit Lib "LTANN13N" (ByVal hObject&, ByVal uUnit&, ByVal pUnitAbbrev$, ByVal uPrecision&, ByVal uFlags&) As Long
Declare Function L_AnnGetUnit Lib "LTANN13N" (ByVal hObject&, ByRef puUnit&, ByVal pUnitAbbrev$, ByRef puPrecision&) As Long
Declare Function L_AnnGetUnitLen Lib "LTANN13N" (ByVal hObject&, ByRef puLen&) As Long
Declare Function L_AnnGetDistance Lib "LTANN13N" (ByVal hObject&, ByRef pdDistance As Double, ByRef pdDistance2 As Double) As Long
Declare Function L_AnnSetGaugeLength Lib "LTANN13N" (ByVal hObject&, ByVal dLength As Double, ByVal uFlags&) As Long
Declare Function L_AnnGetGaugeLength Lib "LTANN13N" (ByVal hObject&, ByRef pdLength As Double) As Long

Declare Function L_AnnSetNodes Lib "LTANN13N" (ByVal hObject&, ByVal bShowNodes As Boolean, ByVal uGapNodes&, ByVal uFlags&) As Long
Declare Function L_AnnGetNodes Lib "LTANN13N" (ByVal hObject&, pbShowNodes As Boolean, puGapNodes&) As Long
Declare Function L_AnnSetProtractorOptions Lib "LTANN13N" (ByVal hObject&, ByVal bAcute As Boolean, ByVal uUnit&, ByVal pszAbbrev$, ByVal uPrecision&, ByVal dArcRadius As Double, ByVal uFlags&) As Long
Declare Function L_AnnGetProtractorOptions Lib "LTANN13N" (ByVal hObject&, pbAcute As Boolean, puUnit&, puAbbrevLen&, pszAbbrev$, puPrecision&, pdArcRadius As Double) As Long
Declare Function L_AnnSetName Lib "LTANN13N" (ByVal hObject&, ByVal bShowName As Boolean, ByVal pText$, NameOffset As ANNPOINT, bNameRestrict As Long, ByVal uFlags&) As Long
Declare Function L_AnnGetName Lib "LTANN13N" (ByVal hObject&, pbShowName As Boolean, puNameLen&, ByVal pName$, NameOffset As ANNPOINT, ByVal pbNameRestrict&) As Long
Declare Function L_AnnSetShowFlags Lib "LTANN13N" (ByVal hObject&, ByVal uShowFlags&, ByVal uFlags&) As Long
Declare Function L_AnnGetShowFlags Lib "LTANN13N" (ByVal hObject&, puShowFlags&) As Long
Declare Function L_AnnGetAngle Lib "LTANN13N" (ByVal hObject&, pdAngle As Double) As Long
Declare Function L_AnnSetMetafile Lib "LTANN13N" (ByVal hObject&, ByVal hMetafile&, ByVal uType&, ByVal uFlags&) As Long
Declare Function L_AnnGetMetafile Lib "LTANN13N" (ByVal hObject&, phMetafile&) As Long
Declare Function L_AnnSetPredefinedMetafile Lib "LTANN13N" (ByVal uType&, ByVal hMetafile&) As Long
Declare Function L_AnnGetPredefinedMetafile Lib "LTANN13N" (ByVal uType&, phMetafile&, pbEnhanced As Boolean) As Long
Declare Function L_AnnSetSecondaryBitmap Lib "LTANN13N" (ByVal hObject&, hBitmap As LEADBITMAPHANDLE, ByVal uFlags&) As Long
Declare Function L_AnnGetSecondaryBitmap Lib "LTANN13N" (ByVal hObject&, hBitmap As LEADBITMAPHANDLE) As Long
Declare Function L_AnnGetAutoMenuEnable Lib "LTANN13N" (ByVal hObject&, ByRef pfSelected&) As Long
Declare Function L_AnnSetAutoMenuEnable Lib "LTANN13N" (ByVal hObject&, ByVal pfSelected&) As Long
Declare Function L_AnnSetAutoMenuItemEnable Lib "LTANN13N" (ByVal hObject&, ByVal nObjectType&, ByVal uItem&, ByVal uEnable&, ByVal uFlags&, ByVal pUserList$) As Long
Declare Function L_AnnGetAutoMenuItemEnable Lib "LTANN13N" (ByVal hObject&, ByVal nObjectType&, ByVal uItem&, puEnable&) As Long
Declare Function L_AnnSetAutoMenuState Lib "LTANN13N" (ByVal hObject&, ByVal nObjectType&, pEnable&, pEnableFlags&, ByVal uBits&, ByVal uFlags&) As Long
Declare Function L_AnnGetAutoMenuState Lib "LTANN13N" (ByVal hObject&, ByVal nObjectType&, pEnable&, pEnableFlags&, ByVal uBits&) As Long
Declare Function L_AnnSetUser Lib "LTANN13N" (ByVal hObject&, ByVal pOldUser$, ByVal pNewUser$, ByVal uFlags&) As Long
Declare Function L_AnnSetToolBarButtons Lib "LTANN13N" (ByVal hwndToolBar&, pButtons As ANNBUTTON, ByVal uButtons&) As Long
Declare Function L_AnnGetToolBarButtons Lib "LTANN13N" (ByVal hwndToolBar&, pButtons As ANNBUTTON, puButtons&) As Long
Declare Function L_AnnFreeToolBarButtons Lib "LTANN13N" (pButtons As ANNBUTTON, ByVal uButtons&) As Long
Declare Function L_AnnGetToolBarInfo Lib "LTANN13N" (ByVal hwndToolBar&, pInfo As ANNTOOLBARINFO) As Long
Declare Function L_AnnSetToolBarColumns Lib "LTANN13N" (ByVal hwndToolBar&, ByVal uColumns&) As Long
Declare Function L_AnnSetToolBarRows Lib "LTANN13N" (ByVal hwndToolBar&, ByVal uColumns&) As Long
Declare Function L_AnnSetAutoDefaults Lib "LTANN13N" (ByVal hAutomation&, ByVal hObject&, ByVal uFlags&) As Long
Declare Function L_AnnSetTransparentColor Lib "LTANN13N" (ByVal hObject&, ByVal crTransparent&, ByVal uFlags%) As Long
Declare Function L_AnnGetTransparentColor Lib "LTANN13N" (ByVal hObject&, pcrTransparent&) As Long
Declare Function L_AnnGetUndoDepth Lib "LTANN13N" (ByVal hObject&, puUsedLevels&, puMaxLevels&) As Long
Declare Function L_AnnGroup Lib "LTANN13N" (ByVal hObject&, ByVal uFlags&, ByVal pUserList$) As Long
Declare Function L_AnnUngroup Lib "LTANN13N" (ByVal hObject&, ByVal uFlags&, ByVal pUserList$) As Long
Declare Function L_AnnSetAutoOptions Lib "LTANN13N" (ByVal hObject&, ByVal uFlags&) As Long
Declare Function L_AnnGetAutoOptions Lib "LTANN13N" (ByVal hObject&, puFlags&) As Long
Declare Function L_AnnGetObjectFromTag Lib "LTANN13N" (ByVal hContainer&, ByVal uFlags&, ByVal uTag&, phTagObject&) As Long
Declare Function L_AnnGetRgnHandle Lib "LTANN13N" (ByVal hObject&, ByVal pXForm&, ByVal phRgn&) As Long
Declare Function L_AnnGetArea Lib "LTANN13N" (ByVal hObject&, puCount&) As Long
Declare Function L_AnnDeletePageOffset Lib "LTANN13N" (ByVal fd&, ByVal nOffset&, ByVal nPage&) As Long
Declare Function L_AnnDeletePage Lib "LTANN13N" ( ByVal pFile$, ByVal nPage&) As Long
Declare Function L_AnnDeletePageMemory Lib "LTANN13N" (ByVal hMem&, ByVal puMemSize&, ByVal nPage&) As Long
Declare Function L_AnnFileInfo Lib "LTANN13N" (ByVal pszFile$, AnnFileInfo As ANNFILEINFO) As Long
Declare Function L_AnnFileInfoOffset Lib "LTANN13N" (ByVal fd&, AnnFileInfo As ANNFILEINFO) As Long
Declare Function L_AnnFileInfoMemory Lib "LTANN13N" (ByVal pMem&, ByVal uMemSize&, AnnFileInfo As ANNFILEINFO) As Long
